objects/nXBI__Business_Credit_Days_Beyond_Terms__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Days_Beyond_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nXBI__DBT__c</fullName>
        <label>DBT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Days_Beyond_Terms__c</fullName>
        <label>Days Beyond Terms</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Business Credit Days Beyond Terms</label>
    <nameField>
        <displayFormat>DBT-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Days Beyond Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>